--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,34 @@
-name: Websocket Server Deploy
-on: push
+name: Push to Docker Hub
+
+on:
+  push:
+    branches:
+      - deploy/v1
+env:
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_PASSWORD }}
+
 jobs:
-  build-container:
-    name: Build Docker container image
+  docker:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Publish to GitHub Packages
-        uses: docker/build-push-action@v2
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: ${{ github.actor }}
-          password: ${{secrets.GITHUB_TOKEN}}
-          registry: docker.pkg.github.com
-          repository: ${{ github.repository }}
-          tags: latest, ${{ github.run_number }}
-      - name: publish to Docker Hub
-        uses: docker/build-push-action@v2
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
+
+      - name: Build and push image
+        uses: docker/build-push-action@v3
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
-          repository: Power-Smart/web-socket-server
-          tags: latest, ${{ github.run_number }}
+          push: true
+          tags: ${{ github.ref }}
         
     
